Adding Welcome Header with cli-welcome

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "dev-arminder",
   "version": "1.1.0",
+  "description": "Dev-arminder Command Line Portfolio.",
   "bin": {
     "dev-arminder": "index.js"
   },
+  "author": {
+    "name": "Arminder Singh",
+    "email": "mail.to.arminder.singh@gmail.com",
+    "url": "https://github.com/dev-arminder"
+  },
   "dependencies": {
-    "clear-any-console": "^1.16.2"
+    "cli-welcome": "^2.2.2"
   }
 }
